objects/Business_Metrics__c.object
<CustomObject>
    <description>Daily, weekly and monthly snapshots of business metrics.  Used to build dashboard reports</description>
    <fields>
        <fullName>Business_Org__c</fullName>
        <label>Business Org</label>
        <picklist>
            <picklistValues>
                <fullName>Comatrol</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Danfoss Power Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turolla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valmova</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Metric_Frequency__c</fullName>
        <label>Metric Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <label>Metric</label>
        <picklist>
            <controllingField>Metric_Frequency__c</controllingField>
            <picklistValues>
                <fullName>Daily Order Book Value Current Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Order Book Value Next Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Order Book Value Month Two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Order Book Value Month Three</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales MTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average Per Day Needed to Meet Forecast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Planned Current Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily PCS Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily PCS On Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTD PCS Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTD PCS On Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercompany PCS Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercompany PCS On Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lines Past Due ESL to REM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lines Past Due ESL to SHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lines Past Due ESL to SHB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lines Past Due REM to ESL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lines Past Due REM to SHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lines Past Due REM to SHB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Past Due 1-10 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Past Due 11-20 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Past Due 21-30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Past Due 31-40 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Past Due 41-50 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Past Due Greater than 50 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Value Released to the Floor (7 Days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Due in Assembly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Due in Cartridge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <picklist>
            <picklistValues>
                <fullName>1321</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1520</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Comatrol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1301</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Turolla</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>12</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Business Metrics</label>
    <nameField>
        <displayFormat>{yyyy}.{mm}.{dd} - {0}</displayFormat>
        <label>Business Metrics</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>